# zist

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  io.rs  lib.rs
tests/: cli.rs
