[package]
name = "zist"
version = "0.1.2"
edition = "2021"
description = "Format-agnostic in-place (de)compression wrappers with zist and unzist."
license = "MIT"
readme = "README.md"
repository = "https://github.com/maphew/zist"
keywords = ["compression", "decompression", "cli", "zstd", "gzip"]
categories = ["command-line-utilities", "compression"]

[dependencies]
zstd = { version = "0.13", default-features = false }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
xz2 = { version = "0.1", features = ["static"] }
bzip2 = { version = "0.4", features = ["static"] }
glob = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
